<resources>
    <string name="app_name">eBe Pass-#>_enger</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBb7F-tT5vbdBNFsUdrr8kwPJh6SkEeUiI</string>
    <string name="nav_home">Home</string>
    <string name="nav_profil">Profil</string>
    <string name="nav_history">History</string>
    <string name="nav_notifications">Notifications/Promo</string>
    <string name="nav_share">Share</string>
    <string name="nav_rate">Rate this App</string>
    <string name="nav_settings">Adv. Settings</string>
    <string name="nav_chat">Zone Chat</string>
    <string name="nav_about">About Us</string>
    <string name="nav_sign_out">logout</string>
    <string name="share_intent_title">Share Whatsapp</string>
    <string name="share_whatsapp_not_instaled">whatsapp not installed</string>
    <string name="pick_contacts">Pick contact(s)</string>
    <string name="picked_contacts">Picked contact(s)</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_contacts">The contact picker won\'t work without this permission. Are you sure you want to deny this permission?</string>
    <string name="permission_deny">Deny</string>
    <string name="permission_retry">Re-try</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>
    <string name="action_settings">Settings</string>
    <string name="promo_titel">Bee~#> Promotions</string>
    <string name="delete">DELETE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profil</item>
        <item>History</item>
        <item>Notifications</item>
        <item>Share</item>
        <item>Zone Chat</item>
    </string-array>
    <string name="activity_title_about_us">Über uns</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_details">Contact Details</string>
    <string name="transition_name_name">transition:NAME</string>
    <string name="transition_name_circle">transition:CIRCLE</string>
    <string name="transition_name_phone">transition:PHONE</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="news">News and Offers</string>
    <string name="app_intro_text">Welcome to Bee Wallet Mananger -Before starting, please take some time to read through our terms of service.</string>
    <string name="app_intro_title">Bee Wallet Manager</string>
    <string name="app_intro_please_agree">Please read and agree to the terms of service before proceeding</string>
    <string name="app_intro_iagree">I agree to terms of service</string>
    <string name="fragment_send_ether_amount">Amount</string>
    <string name="fragment_send_cheaper">Cheaper</string>
    <string name="fragment_send_faster">Faster</string>
    <string name="fragment_send_total">Total</string>
    <string name="fragment_send_send_button">Send</string>
    <string name="fragment_recipient_hint_address">Address</string>
    <string name="fragment_recipient_continue">Continue</string>
    <string name="fragment_detail_add_sharing">Address Sharing</string>
    <string name="fragment_detail_share_button">Share</string>
    <string name="walletgen_title">Generate Wallet</string>
    <string name="request_ether_title">Request </string>
    <string name="qr_scan_title">QR Address</string>
    <string name="activity_send_title">Transaction</string>
    <string name="last_24_hours">Last 24 Hours</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="last_30_days">Last 30 Days</string>
    <string name="last_year">Last Year</string>
    <string name="err_no_con">No internet connection</string>
    <string name="wallet_menu_title">Wallet Settings</string>
    <string name="wallet_menu_changename">Change Wallet Name</string>
    <string name="wallet_menu_copyadd">Address to Clipboard</string>
    <string name="wallet_menu_export">Export Wallet</string>
    <string name="wallet_menu_delete">Delete Wallet</string>
    <string name="wallet_suc_exported">Wallet successfully exported</string>
    <string name="wallet_no_permission">Please grant write permission to export wallets</string>
    <string name="wallet_one_at_a_time">Not So Fast</string>
    <string name="wallet_one_at_a_time_text">We are currently generating a wallet for you, you can see the progress in your notification bar. Don\'t worry, we will notify you as soon as your wallet generation is finished :-) If you really wish to generate another one please wait for the current wallet to be completed first.</string>
    <string name="button_ok">OK</string>
    <string name="wallet_removal_title">ATTENTION: Wallet Removal</string>
    <string name="wallet_removal_sure">Are you sure you want to delete your watch only wallet?</string>
    <string name="wallet_removal_privkey">! THIS IS A WALLET WITH A PRIVATE KEY ! IF YOU HAVE NO BACKUP AND CONTINUE ALL YOUR Reserve ON THAT WALLET WILL BE LOST FOR EVER! ARE YOU SURE YOU WANT TO PROCEED? WALLET ADDRESS:</string>
    <string name="wallet_removal_last_warning">ARE YOU SURE? WALLET AND ALL COINS / TOKEN ON IT ARE GOING TO GET PERMANENTLY REMOVED. THIS IS THE LAST WARNING FOR WALLET:</string>
    <string name="button_yes">YES</string>
    <string name="button_no">NO</string>
    <string name="name_your_wallet">Name Your Wallet</string>
    <string name="button_cancel">Cancel</string>
    <string name="name_other_address">Name Other Address</string>
    <string name="trans_menu_title">Transaction Settings</string>
    <string name="trans_menu_changename">Change Address Name</string>
    <string name="trans_menu_viewreceiver">View Receiver Address</string>
    <string name="trans_menu_openinb">Open in Browser</string>
    <string name="trans_no_trans_found">No transactions found for this address.</string>
    <string name="err_send_not_enough_ether">Not enough Money on that Address</string>
    <string name="err_send_invalidamount">Invalid Amount</string>
    <string name="err_send_noreceiver">No receiver specified</string>
    <string name="err_send_noamount">No amount specified</string>
    <string name="name_your_address">Name Your Address</string>
    <string name="name_this_address">Name This Address</string>
    <string name="addressbook_menu_title">Addressbook Settings</string>
    <string name="addressbook_menu_remove">Remove</string>
    <string name="import_title">Import Wallet</string>
    <string name="import_button">Import</string>
    <string name="main_grant_permission_export">Please grant write permission to export Wallets</string>
    <string name="main_grant_permission_import">Please grant read permission to import Wallets</string>
    <string name="dialog_watch_only_title">Lookup Address</string>
    <string name="dialog_importing_wallets_title">Importing Wallets?</string>
    <string name="dialog_importing_wallets_text">We have detected %1$d new wallet%2$s in our Bee Wallet folder. Would you like to import: %3$s</string>
    <string name="dialog_ex_nofull_title">No Full Wallet</string>
    <string name="dialog_ex_nofull_text">Watch only wallets can not be exported.</string>
    <string name="dialog_exporting_title">Exporting your Wallet</string>
    <string name="dialog_exporting_text">A copy of your  wallet Information will be placed inside the folder \"BeeWallet\" in the root directory of your Android phone. Please note that other applications that run on your device can technically access any wallets that you have exported. Due to this, we highly recommend erasing all exported wallets from the Bee Wallet manager folder as soon as you have finished backing them up.</string>
    <string name="dialog_nofullwallet">No Full Wallet</string>
    <string name="dialog_nofullwallet_text">In order to send funds you need a full wallet with a private key. Please generate or import one first.</string>
    <string name="dialog_no_wallets">No Wallets</string>
    <string name="dialog_no_wallets_text">In order to request funds you need a wallet or a watch only address.</string>
    <string name="dialog_no_wallets_found">No Wallets Found</string>
    <string name="dialog_no_wallets_found_text">Please place the wallet you want to import inside the Bee Wallet folder and make sure it is correctly named. When importing from Mist or other desktop client you don\'t have to rename your wallet.</string>
    <string name="notification_ticker">Incoming  Transaction…</string>
    <string name="notification_transfersuc">Transfer successful</string>
    <string name="notification_transferfail">Transfer Failed</string>
    <string name="notification_transferingticker">Transferring Money…</string>
    <string name="notification_transfering_title">Transferring Money</string>
    <string name="notification_might_take_a_minute">This might take a minute</string>
    <string name="notification_wallgen_maytake">This may take a couple minutes</string>
    <string name="notification_wallgen_title">Generating Wallet…</string>
    <string name="notification_wallimp_title">Importing Wallet…</string>
    <string name="notification_wallgen_finished">Wallet Creation Finished!</string>
    <string name="notification_wallimp_finished">Wallet Import Finished!</string>
    <string name="notification_click_to_view">Click to view</string>
    <string name="ether_and_token"> Token</string>
    <string name="prefs_lock_with_pw">Lock with Password</string>
    <string name="prefs_lock_with_pw_sum">If enabled Bee Wallet will ask you for a password before launching the app</string>
    <string name="prefs_set_pw">Set Password</string>
    <string name="prefs_set_pw_sum">Specify your login pattern</string>
    <string name="prefs_cat_security">Security</string>
    <string name="fab_sendether_from">Send Money From</string>
    <string name="fab_sendether_to">Send Money To</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="tx_cost">TX Cost</string>
    <string name="gas_used">Gas Used</string>
    <string name="gas_price">Gas Price</string>
    <string name="nonce">Nonce</string>
    <string name="block_height">Block Height</string>
    <string name="timestamp">Timestamp</string>
</resources>