<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_profil"
            android:title="@string/nav_profil" />


    </group>

    <item android:title="Other">
        <menu>

            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_notifications_black_24dp"
                android:title="@string/nav_notifications" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:enabled="true"
                android:title="@string/nav_share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rating_icon"
                android:enabled="true"
                android:title="@string/nav_rate" />

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/about_location_icon"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
